syntax = "proto3";

package pb;

// Removed the import statement for "user.proto"
import "user.proto";

option go_package = "github.com/vantu-fit/master-go-be/pb";

message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password =4;
    
}

message CreateUserResponse {
    User user = 1;
}



